# AlgoLab-Ai

./: .gitignore  AlgoLab AI.slnx  AlgoLab AI.vcxproj  AlgoLab AI.vcxproj.filters  README.md  imgui.ini  main.cpp
application/: CMakeLists.txt  main.cpp
application/include/algorithms/: KMC.h  LinearRegression.h
application/include/applications/: linearregressionapp.h
application/include/utilities/: csv.h  csvreader.h  selecttype.h
application/src/algorithms/: KMC.cpp  KNN.cpp
application/src/applications/: algolab.cpp  kmcapp.cpp  knnapp.cpp  linearregressionapp.cpp
devbin/: filedialogandcsvbin.cpp  kmcbin.cpp  kmcknn.cpp  knnbin.cpp
include/algorithms/: KNN.h
include/applications/: algolab.h  kmcapp.h  knnapp.h
include/utilities/: attribute.h  centroid.h  csv.h  csvmap.h  point.h  utils.h
libs/tinyfiledialogs/: README.txt
src/algorithms/: KMC.cpp  LinearRegression.cpp
src/applications/: algolab.cpp  knnapp.cpp  linearregressionapp.cpp
src/utilities/: csv.cpp
testing/: knn_dataset.csv
testingcsvs/: hardware_doctors.csv  kmc_dataset.csv
